# Angewandte_Informatik

./: .gitmodules  README.md
2_SoSe_22/Systemprogrammierung/: .gitignore  CMakeLists.txt  LICENSE  README.md
2_SoSe_22/Systemprogrammierung/exam/: README.md  cheatsheet.md
2_SoSe_22/Systemprogrammierung/exam/exam_preparation/: .gitignore  Makefile  README.md
2_SoSe_22/Systemprogrammierung/exam_preparation/: README.md
2_SoSe_22/Systemprogrammierung/exam_preparation/part_1/: Makefile  gruss.h  gruss_test.c
2_SoSe_22/Systemprogrammierung/exam_preparation/part_3/: Makefile  heap_and_stack.c
2_SoSe_22/Systemprogrammierung/exam_preparation/part_4/: Makefile  summe.c
2_SoSe_22/Systemprogrammierung/exam_preparation/part_6/: Makefile  gruss.cpp  gruss.h  gruss_test.cpp
2_SoSe_22/Systemprogrammierung/mock_exam/: hash.h  sandbox.c
2_SoSe_22/Systemprogrammierung/mock_exam/aufgabe3/: quadrat.h  wuerfel.h
2_SoSe_22/Systemprogrammierung/mock_exam/part_1/: part_1.c
2_SoSe_22/Systemprogrammierung/mock_exam/part_3/: Makefile  quadrat.h  wuerfel.h
2_SoSe_22/Systemprogrammierung/sandbox/: Makefile  rule_of.cpp  sandbox.c  test.c
2_SoSe_22/Systemprogrammierung/sandbox/rule_of/: HeapData.cpp  HeapData.h  Makefile  rule_of  rule_of.cpp
2_SoSe_22/Systemprogrammierung/src/: README.md
2_SoSe_22/Systemprogrammierung/src/aufgabe02/: README.md  bubblesort.c  protokoll-aufgabe2.txt
2_SoSe_22/Systemprogrammierung/src/aufgabe03/: Makefile  README.md  (+3 more)
2_SoSe_22/Systemprogrammierung/vorlesung/: htwg_string.cpp  htwg_string.hpp  intlist.cpp  intlist.h  string.cpp
(+411 files in other folders)
